<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            style="@style/TeamListToolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            app:title="@string/team_list"
            app:layout_scrollFlags="enterAlways|scroll"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/bkgScreen"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".teamList.TeamListActivity">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_teams_filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:singleSelection="true"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/cp_premier_league"
                style="@style/TeamListChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/premier_league"
                android:checked="false"
                android:textAppearance="@style/TeamListChipTextAppearance"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/cp_bundesliga"
                style="@style/TeamListChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/bundesliga"
                android:textAppearance="@style/TeamListChipTextAppearance"/>

        </com.google.android.material.chip.ChipGroup>

        <include
            android:id="@+id/include_shimmer_container"
            android:layout_height="0dp"
            android:layout_width="0dp"
            layout="@layout/shimmer_loading_layout"
            app:layout_constraintTop_toBottomOf="@id/cg_teams_filters"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_team_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="none"
            android:overScrollMode="never"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/cg_teams_filters"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:itemCount="10"
            tools:listitem="@layout/team_item"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>